--- a/sistema_metodos_agiles/webApp/templates/home/tipoUS.html
+++ b/sistema_metodos_agiles/webApp/templates/home/tipoUS.html
@@ -29,9 +29,14 @@
                   <input type="text" class="form-control" id="recipient-name" name="descripcion">
                 </div>
                 <div class="form-group">
-                  <label for="recipient-name" class="col-form-label" >Prioridad</label>
-                  <input type="number" class="form-control" id="recipient-name" name="prioridad">
-                </div>
+                  <select class="form-control" aria-label="Default select example" name="prioridad">
+                      <option selected disabled>Seleccionar la prioridad</option>
+                      {% for prioridad in prioridades %}
+                      <option value="{{prioridad.id}}">{{prioridad.descripcion}}</option>
+                      {% endfor %}
+                    </select>
+              </div>
+              
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
                 <button type="submit" class="btn btn-primary">Guardar</button>
               </form>
@@ -40,8 +45,7 @@
     </div>
   </div>
 
-<button class="btn btn-primary " data-toggle="modal" data-target="#exampleModal"><i class="material-icons">add</i>Agregar tipo de US</button>
-
+<button class="btn btn-primary" data-toggle="modal" data-target="#exampleModal"><i class="material-icons">add</i>Agregar tipo de US</button>
 
         <div class="row">
             <div class="col-md-12">
